Corrected layout issue

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -60,8 +60,8 @@ section {
     }
 
     .middle {
-        width: 60%;
-        margin: 0px 0px 0px 250px;
+        width: 50%;
+        margin: 0px 0px 0px 350px;
     }
 
     .left {
